# Agent

./: .gitignore  .gitmodules  HOST_QUICKSTART.md  README.md  RECOMMENDATION_SYSTEM_SPEC.md  TRACE_QUICKSTART.md  __init__.py  env.template  pyproject.toml  requirements.txt  setup.py  validate_trace_system.py
agent/: __init__.py  __main__.py  agent.py  host.py
base/: __init__.py  actor.py  agent.py  agent_memory.py  base_agent.py  content_head.py  human.py  strategy_head.py
config/: __init__.py  agent_config.py  logging_config.py
examples/: .gitignore  README.md  agent_with_host.py  host_anthropic.py  host_openai.py  host_qwen_local.py  simple_agent_example.py  simple_simulation.py  test_host_simple.py  trace_example.py
learning/: __init__.py
roles/: __init__.py  audience_agent.py  brand_agent.py  creator_agent.py  moderator_agent.py
tests/: test_logging.py
trace/: .gitignore  .gitkeep  README.md
utils/: __init__.py  log_analyzer.py  logging_utils.py  trace_decorators.py
